atualizacao com fotos e mais info ao binario

--- a/_posts/2024-09-27-binario.md
+++ b/_posts/2024-09-27-binario.md
@@ -63,6 +63,21 @@ Vamos subtrair os números binários 101 e 010:
 - `0 - 1 = 1`, pegamos emprestado o 1 da próxima linha.
 - `1 - 0 = 1`, porém como pegamos o 1, fica `0 - 0`, que é igual a `0`.
 
+#### E quando o resultado seria um número negativo?
+Já que não existem números negativos no binário, quando se faz uma conta que daria esse tipo de resultado, existe uma fórmula especial.  
+Essa fórmula consiste em inverter o maior número, somar um a ele, e esse resultado é somado ao menor número que existia na operação inicialmente.  
+<br/>
+Vamos para um exemplo:
+<br/>
+##### `0010 - 1000`, que seria 2 - 8 em decimais.
+1. Pegamos o maior número, que neste caso é o `1000`, e invertemos.
+2. Agora temos o número `0111`.
+3. Pegamos esse número invertido e somamos `1`: `0111 + 1 = 1000`.
+4. Por fim, somamos com o primeiro número que fazia parte da subtração.
+5. Ficando assim: `0010 + 1000 = 1010`.
+
+
+
 ## Conversão de Decimal para Binário
 Para converter um número decimal para binário, você pode usar a divisão repetida por 2. O resultado vai ser o resto da divisão, e a continuação vai ser o resultado da divisão. O resultado final será a anotação e todos os restos de todas as divisões anotadas do último cálculo feito para o primeiro cálculo feito. Veja este exemplo:
 
@@ -84,3 +99,20 @@ Para converter um número binário para decimal, você deve multiplicar cada dí
 Somando todos os resultados: `0 + 0 + 4 = 4`.
 
 Portanto, **100** em binário é igual a **4** em decimal.
+
+## Aqui está uma tabela com alguns números binários e seus equivalentes em decimal:
+
+| Binário | Decimal |
+|---------|---------|
+| 0       | 0       |
+| 1       | 1       |
+| 10      | 2       |
+| 11      | 3       |
+| 100     | 4       |
+| 101     | 5       |
+| 110     | 6       |
+| 111     | 7       |
+| 1000    | 8       |
+| 1001    | 9       |
+| 1010    | 10      |
+
