--- a/_posts/2024-10-05-dhcp.md
+++ b/_posts/2024-10-05-dhcp.md
@@ -71,7 +71,11 @@ Se os PCs responderem com sucesso ao comando `ping`, parabéns! Você configurou
 
 ### Possíveis problemas:
 - **Request timed out**: Se a resposta for algo como "Request timed out", verifique se os cabos estão conectados corretamente e se o servidor DHCP está configurado corretamente.
-- **Endereço IP duplicado**: Caso dois PCs recebam o mesmo endereço IP, pode ser um erro na configuração do servidor DHCP. Verifique o intervalo de IPs e o número máximo de usuários configurados no servidor DHCP.
+- **Endereço IP duplicado**: Caso dois PCs recebam o mesmo endereço IP, pode ser
+  um erro na configuração do servidor DHCP. Verifique o intervalo de IPs e o
+  número máximo de usuários configurados no servidor DHCP.
+  
+---
 
 Parabéns! Você configurou com sucesso um **servidor DHCP** no Cisco Packet
 Tracer, permitindo que seus PCs recebam endereços IP automaticamente e se
