--- a/_posts/2024-10-05-dhcp.md
+++ b/_posts/2024-10-05-dhcp.md
@@ -1,5 +1,5 @@
 ---
-title: A Jornada dos Três PCs- Configurando um Servidor DHCP (Post 2)
+title: Configurando um Servidor DHCP - A Jornada dos Três PCs (Post 2)
 date: 2024-10-05 10:50:00 -03:00
 categories: [estudo, ambientes computacionais, conectividade, rede, A jornada dos 3 PCs, cisco]
 tags: [estudo, ambientes computacionais, redes, cisco]
