--- a/_posts/2024-10-05-dns.md
+++ b/_posts/2024-10-05-dns.md
@@ -1,5 +1,5 @@
 ---
-title: A Jornada dos Três PCs - Entendendo o DNS (Post 3)
+title: Entendendo o DNS - A Jornada dos Três PCs (Post 3)
 date: 2024-10-05 11:25:00 -03:00
 categories:
   [
