--- a/_posts/2024-10-04-lan.md
+++ b/_posts/2024-10-04-lan.md
@@ -3,6 +3,7 @@ title: Criando sua Primeira Conexão Local no Cisco Packet Tracer- A Jornada dos
 date: 2024-10-04 10:50:00 -03:00
 categories: [estudo, ambientes computacionais, conectividade, rede, A jornada dos 3 PCs, cisco]
 tags: [estudo, ambientes computacionais, redes, cisco]
+image: "/assets/img/aJornadaDos3pc.png"
 ---
 
 Bem-vindo à série de posts **A Jornada dos Três PCs**, onde farei diversos tipos de conexões entre eles no Cisco Packet Tracer. Este é o primeiro post e nele vamos fazer uma conexão local simples.
