--- a/_posts/2024-10-05-dhcp.md
+++ b/_posts/2024-10-05-dhcp.md
@@ -3,6 +3,7 @@ title: Configurando um Servidor DHCP - A Jornada dos Três PCs (Post 2)
 date: 2024-10-05 10:50:00 -03:00
 categories: [estudo, ambientes computacionais, conectividade, rede, A jornada dos 3 PCs, cisco]
 tags: [estudo, ambientes computacionais, redes, cisco]
+image: "/assets/img/aJornadaDos3pc.png"
 ---
 Bem-vindos ao segundo post da série **A Jornada dos Três PCs**, onde continuamos explorando como conectar dispositivos no **Cisco Packet Tracer**. No primeiro post, vimos como criar uma **conexão local simples** entre três PCs. Agora, vamos elevar o nível e configurar um **servidor DHCP** para automatizar a atribuição de endereços IP.
 
