--- a/_posts/2024-10-05-dns.md
+++ b/_posts/2024-10-05-dns.md
@@ -11,6 +11,7 @@ categories:
     cisco,
   ]
 tags: [estudo, ambientes computacionais, redes, cisco]
+image: "/assets/img/aJornadaDos3pc.png"
 ---
 
 Bem-vindos ao terceiro post da série A Jornada dos Três PCs! Após explorarmos a configuração de um servidor DHCP, agora vamos desvendar o que é o DNS (Domain Name System) e como ele funciona.
