--- a/_posts/2024-10-05-web.md
+++ b/_posts/2024-10-05-web.md
@@ -11,6 +11,7 @@ categories:
     cisco,
   ]
 tags: [estudo, ambientes computacionais, redes, cisco]
+image: "/assets/img/aJornadaDos3pc.png"
 ---
 
 Bem-vindos ao quarto post da série **A Jornada dos Três PCs**! Depois de configurarmos um **servidor DNS**, agora vamos explorar o que é um **servidor web** e como configurá-lo no Cisco Packet Tracer.
