--- a/_posts/2024-10-05-web.md
+++ b/_posts/2024-10-05-web.md
@@ -106,7 +106,7 @@ Agora vamos configurar um servidor web na nossa rede.
 
 ---
 
-Parabéns! Você configurou com sucesso um **servidor web** no Cisco Packet Tracer, permitindo que seus PCs acessem páginas da web localmente. Agora, sua rede está ainda mais funcional, e você pode explorar as possibilidades de criação de sites e aplicativos web. No próximo post, vamos explorar mais sobre como integrar serviços na sua rede. Fique ligado!
+Parabéns! Você configurou com sucesso um **servidor FTP** no Cisco Packet Tracer, permitindo que seus PCs realizem transferências de arquivos na rede local. Agora, sua rede está mais eficiente, e você pode gerenciar arquivos de forma prática entre os dispositivos conectados. No próximo post, vamos explorar como configurar e integrar uma **conexão Wi-Fi** na sua rede. Fique atento!
 
 
 #### Baixar arquivo final
