--- a/_posts/2024-10-06-wifi.md
+++ b/_posts/2024-10-06-wifi.md
@@ -52,20 +52,20 @@ Agora, vamos configurar uma rede Wi-Fi separada na nossa rede existente.
 3. Em **Wireless Security**, configure uma senha para sua rede Wi-Fi:
    - **Security Mode**: Selecione **WPA2-PSK**.
    - **PSK Pass Phrase**: Defina uma senha, como `senhaWiFi123`.
-<img src="/assets/img/2024-10-06-wifi/Captura de tela de 2024-10-06 14-32-06.png" alt="1"/>
+   - <img src="/assets/img/2024-10-06-wifi/Captura de tela de 2024-10-06 14-32-06.png" alt="1"/>
 ### 3. Configurando os Notebooks
 
-1. Clique em cada **Notebook** e confira se permitem WIFI:
-	 - caso na lateral do notebook tenha um modulo de entrada de cabo de rede, desligue o notebook apertando no botao a cima do led amarelo.
-	-  arraste o modulo para a lateral.
-	- pegue o modulo `wpc300n` e arraste para o buraco vasio.
-	- ligue novamente o notebook
-	- <img src="/assets/img/2024-10-06-wifi/Captura de tela de 2024-10-06 14-36-19.png" alt="1"/>
+1. Clique em cada **Notebook** e confira se permitem Wi-Fi:
+   - Caso na lateral do notebook tenha um módulo de entrada de cabo de rede, desligue o notebook clicando no botão acima do LED amarelo.
+   - Arraste o módulo para fora da lateral.
+   - Pegue o módulo `wpc300n` e arraste para o slot vazio.
+   - Ligue novamente o notebook.
+   - <img src="/assets/img/2024-10-06-wifi/Captura de tela de 2024-10-06 14-36-19.png" alt="1"/>
 2. vá até a aba **Desktop**.
 3. Abra a opção **PC Wireless** e clique em **Connect**.
-	 - <img src="/assets/img/2024-10-06-wifi/Captura de tela de 2024-10-06 14-37-44.png" alt="1"/>
+   - <img src="/assets/img/2024-10-06-wifi/Captura de tela de 2024-10-06 14-37-44.png" alt="1"/>
 4. Escolha a rede Wi-Fi que você acabou de criar (`MinhaRedeWiFi`) e insira a senha.
- -  <img src="/assets/img/2024-10-06-wifi/Captura de tela de 2024-10-06 14-38-04.png" alt="1"/>
+   - <img src="/assets/img/2024-10-06-wifi/Captura de tela de 2024-10-06 14-38-04.png" alt="1"/>
 
 ### 4. Definindo Configuração IP para os Notebooks
 
@@ -77,7 +77,7 @@ Agora, vamos configurar uma rede Wi-Fi separada na nossa rede existente.
    - **Notebook 2**:
      - IP Address: `192.168.1.21`
      - Subnet Mask: `255.255.255.0`
- -  <img src="/assets/img/2024-10-06-wifi/Captura de tela de 2024-10-06 14-40-18.png" alt="1"/>
+   - <img src="/assets/img/2024-10-06-wifi/Captura de tela de 2024-10-06 14-40-18.png" alt="1"/>
 
 ### 5. Testando a Conexão
 
