Update and rename 2024-10-07-a3 to 2024-10-07-a3.md

--- a/_posts/2024-10-07-a3.md
+++ b/_posts/2024-10-07-a3.md
@@ -1,12 +1,10 @@
 ---
-title: Trabalhos da a3
+title: "Trabalhos da A3"
 date: 2024-10-06 21:20:00 -03:00
-categories:
-  [
-    a3
-  ]
+categories: [a3]
 tags: [a3]
 ---
+
 # ambientes computacionais:
 1. Circuito somador/subitrador
 2. Codigo sobre IOT e portas logicas
