--- a/_posts/2024-10-07-a3.md
+++ b/_posts/2024-10-07-a3.md
@@ -3,28 +3,33 @@ title: Trabalhos da A3
 date: 2024-10-06 21:20:00 -03:00
 categories: [a3]
 tags: [a3]
+image: https://acdn.mitiendanube.com/stores/001/431/418/products/flt-zevxwaijkrs1-fd971a401c1147a60a16834076806457-1024-1024.jpg
 ---
 
 # ambientes computacionais:
-1. Circuito somador/subitrador
+1. ULA 4 bits
 2. Codigo sobre IOT e portas logicas
-  -**Dia**: 03/11/24
-  -**Pontos**:
-https://wokwi.com/
+  - **Dia**: 03/11/24
+  - **Pontos**: 10
+  - **Descricao**: Baseado no circuito que será disponibilizado, deverá escrever o código que fará com que o circuito obedeça as regras estabelecidas na atividade, essas regras estarão em uma atividade na Ulife que será diponibilizada dia 09/10/2024
+  - <a hrfe="https://wokwi.com/">pagina do trabalho</a>
 
-3. seminario sobre segurança
-  -**Dia**: 21/10/24
-  -**Pontos**: 10
-  -**tema**:
-  -**grupo**
+3. Seminário sobre ameaças e segurança
+  - **Dia**: 21/10/24
+  - **Pontos**: 10
+  - **tema**:
+  - **grupo**:
 4. Curso da cisco: Introdução a cybersegurança
-  -**Dia**: primeira semana de dezembro
-  -**Pontos**:10
-  https://www.netacad.com/pt/courses/introduction-to-cybersecurity?courseLang=en-US
+  - **Dia**: 07/12/24
+  - **Pontos**: 10
+  - <a href="https://www.netacad.com/courses/introduction-to-cybersecurity?courseLang=pt-BR ">Pagina do curso</a>
 
 
 ---
 
 # sistemas computacionais
-1- curso cisco
-2- Cidades
+1. Curso da Cisco - Introdução a Cybersegurança
+  - **Dia**: 07/12/24
+  - **Pontos**: 10
+  - <a href="https://www.netacad.com/pt/courses/networking-basics?courseLang=pt-BR">Pagina do curso<a>
+2. Cidades
