--- a/_posts/2024-10-14-cidades.md
+++ b/_posts/2024-10-14-cidades.md
@@ -5,7 +5,7 @@ categories: [a3]
 tags: [a3]
 ---
 
-# 1. **Sub-redes e IPs das Redes Locais**:
+# 1. Sub-redes e IPs das Redes Locais:
 Cada filial deve utilizar uma sub-rede diferente da rede **192.168.20.0/27**, o que permite até 30 IPs em cada sub-rede. A seguir estão as sub-redes possíveis:
 
 - **Guanambi (Sub-rede 1):**
@@ -26,25 +26,40 @@ Cada filial deve utilizar uma sub-rede diferente da rede **192.168.20.0/27**, o 
 	- **Roteador DMZ:** 172.16.100.1
 	- **Intervalo de IPs para servidores na DMZ:** 172.16.100.2 - 172.16.100.14  
     (Esses IPs serão atribuídos aos servidores Web, DNS, DHCP e FTP)
+
 # 2. Endereçamento entre Roteadores (Redes /30):
 As conexões entre os roteadores devem ser feitas usando a rede **10.10.10.0/30**, que permite apenas 2 IPs utilizáveis por sub-rede. Aqui está um exemplo de distribuição de endereços:
 
-- **Conexão entre DMZ e Guanambi (10.10.10.0/30):**
-    - Roteador DMZ: 10.10.10.1
-    - Roteador Guanambi: 10.10.10.2
-- **Conexão entre DMZ e Caetité (10.10.10.4/30):**
-    - Roteador DMZ: 10.10.10.5
-    - Roteador Caetité: 10.10.10.6
-- **Conexão entre DMZ e Urandi (10.10.10.8/30):**
-    - Roteador DMZ: 10.10.10.9
-    - Roteador Urandi: 10.10.10.10
-- **Conexão entre DMZ e Brumado (10.10.10.12/30):**
-    - Roteador DMZ: 10.10.10.13
-    - Roteador Brumado: 10.10.10.14
+- **Conexão DMZ:**
+    - Roteador Guanambi `Serial2/0`: 10.10.10.1
+    - Roteador Caetité `Serial3/0`: 10.10.10.5
+    - Roteador Urandi `Serial6/0`: 10.10.10.9
+    - Roteador Brumado `Serial7/0`: 10.10.10.13
+- **Conexão Guanambi:**
+    - Roteador DMZ `Serial2/0`: 10.10.10.2
+    - Roteador Caetité `Serial3/0`: 10.10.10.17
+    - Roteador Urandi `Serial7/0`: 10.10.10.21
+    - Roteador Brumado `Serial6/0`: 10.10.10.25
+- **Conexão Caetité:**
+    - Roteador DMZ `Serial2/0`: 10.10.10.6
+    - Roteador Guanambi `Serial3/0`: 10.10.10.18
+    - Roteador Urandi `Serial6/0`: 10.10.10.29
+    - Roteador Brumado `Serial7/0`: 10.10.10.33
+- **Conexão Urandi:**
+    - Roteador DMZ `Serial2/0`: 10.10.10.10
+    - Roteador Guanambi `Serial7/0`: 10.10.10.22
+    - Roteador Caetité `Serial6/0`: 10.10.10.30
+    - Roteador Brumado `Serial3/0`: 10.10.10.37
+- **Conexão Brumado:**
+    - Roteador DMZ `Serial2/0`: 10.10.10.14
+    - Roteador Guanambi `Serial6/0`: 10.10.10.26
+    - Roteador Caetité `Serial7/0`: 10.10.10.34
+    - Roteador Urandi `Serial3/0`: 10.10.10.38
+
 
 # 1 e 2. configurando os roteadores:
 ## 1. IPS
-### 1. **Roteador DMZ**
+### 1.1. Roteador DMZ
 ```bash
 enable
 configure terminal
@@ -68,7 +83,7 @@ write memory
 
 ```
 
-### 2. **Roteador Guanambi**
+### 1.2. Roteador Guanambi
 ```bash
 enable
 configure terminal
@@ -77,13 +92,18 @@ ip address 192.168.20.1 255.255.255.224
 no shutdown
 interface serial 2/0
 ip address 10.10.10.2 255.255.255.252
+interface serial 3/0
+ip address 10.10.10.17 255.255.255.252
+interface serial 6/0
+ip address 10.10.10.25 255.255.255.252
+interface serial 7/0
+ip address 10.10.10.21 255.255.255.252
 no shutdown
 end
 write memory
-
 ```
 
-### 3. **Roteador Caetité**
+### 1.3. Roteador Caetité
 ```bash
 enable
 configure terminal
@@ -92,12 +112,18 @@ ip address 192.168.20.33 255.255.255.224
 no shutdown
 interface serial 2/0
 ip address 10.10.10.6 255.255.255.252
+interface serial 3/0
+ip address 10.10.10.18 255.255.255.252
+interface serial 6/0
+ip address 10.10.10.29 255.255.255.252
+interface serial 7/0
+ip address 10.10.10.33 255.255.255.252
 no shutdown
 end
 write memory
 ```
 
-### 4. Roteador Urandi
+### 1.4. Roteador Urandi
 ```bash
 enable
 configure terminal
@@ -106,12 +132,18 @@ ip address 192.168.20.65 255.255.255.224
 no shutdown
 interface serial 2/0
 ip address 10.10.10.10 255.255.255.252
+interface serial 3/0
+ip address 10.10.10.37 255.255.255.252
+interface serial 6/0
+ip address 10.10.10.30 255.255.255.252
+interface serial 7/0
+ip address 10.10.10.22 255.255.255.252
 no shutdown
 end
 write memory
 ```
 
-### 5. **Roteador Brumado**
+### 1.5. Roteador Brumado
 ```bash
 enable
 configure terminal
@@ -120,13 +152,19 @@ ip address 192.168.20.97 255.255.255.224
 no shutdown
 interface serial 2/0
 ip address 10.10.10.14 255.255.255.252
+interface serial 3/0
+ip address 10.10.10.38 255.255.255.252
+interface serial 6/0
+ip address 10.10.10.26 255.255.255.252
+interface serial 7/0
+ip address 10.10.10.34 255.255.255.252
 no shutdown
 end
 write memory
 ```
 
 ## 2. Rotas
-### 1. **Roteador DMZ**
+### 2.1. **Roteador DMZ**
 ```bash
 enable
 configure terminal
@@ -134,61 +172,71 @@ ip route 192.168.20.0 255.255.255.224 10.10.10.2
 ip route 192.168.20.32 255.255.255.224 10.10.10.6
 ip route 192.168.20.64 255.255.255.224 10.10.10.10
 ip route 192.168.20.96 255.255.255.224 10.10.10.14
+
+ip route 10.20.20.20.0 255.255.255.252 10.10.10.2
 end
 write memory
-
 ```
 
-### 2. Roteador Guanambi
+### 2.2. Roteador Guanambi
 ```bash
 enable
 configure terminal
 ip route 172.16.100.0 255.255.255.240 10.10.10.1
-ip route 192.168.20.32 255.255.255.224 10.10.10.1
-ip route 192.168.20.64 255.255.255.224 10.10.10.1
-ip route 192.168.20.96 255.255.255.224 10.10.10.1
+ip route 192.168.20.32 255.255.255.224 10.10.10.18
+ip route 192.168.20.64 255.255.255.224 10.10.10.22
+ip route 192.168.20.96 255.255.255.224 10.10.10.26
 end
 write memory
 ```
 
-### 3. **Roteador Caetité**
+### 2.3. Roteador Caetité
 ```bash
 enable
 configure terminal
 ip route 172.16.100.0 255.255.255.240 10.10.10.5
-ip route 192.168.20.0 255.255.255.224 10.10.10.5
-ip route 192.168.20.64 255.255.255.224 10.10.10.5
-ip route 192.168.20.96 255.255.255.224 10.10.10.5
+ip route 192.168.20.0 255.255.255.224 10.10.10.17
+ip route 192.168.20.64 255.255.255.224 10.10.10.30
+ip route 192.168.20.96 255.255.255.224 10.10.10.34
 end
 write memory
 ```
 
-### 4. **Roteador Urandi**
+### 2.4. Roteador Urandi
 ```bash
 enable
 configure terminal
 ip route 172.16.100.0 255.255.255.240 10.10.10.9
-ip route 192.168.20.0 255.255.255.224 10.10.10.9
-ip route 192.168.20.32 255.255.255.224 10.10.10.9
-ip route 192.168.20.96 255.255.255.224 10.10.10.9
+ip route 192.168.20.0 255.255.255.224 10.10.10.21
+ip route 192.168.20.32 255.255.255.224 10.10.10.29
+ip route 192.168.20.96 255.255.255.224 10.10.10.28
 end
 write memory
-
 ```
 
-### 5. **Roteador Brumado**
+### 2.5. Roteador Brumado
 ```bash
 enable
 configure terminal
 ip route 172.16.100.0 255.255.255.240 10.10.10.13
-ip route 192.168.20.0 255.255.255.224 10.10.10.13
-ip route 192.168.20.32 255.255.255.224 10.10.10.13
-ip route 192.168.20.64 255.255.255.224 10.10.10.13
+ip route 192.168.20.0 255.255.255.224 10.10.10.25
+ip route 192.168.20.32 255.255.255.224 10.10.10.33
+ip route 192.168.20.64 255.255.255.224 10.10.10.37
 end
 write memory
+```
+
+Para testar a configuração, você pode usar o comando `ping` para verificar a
+conectividade. Exemplo:
+```bash
+ping -n 4 192.168.20.1
+ping -n 4 192.168.20.2
+ping -n 4 192.168.20.3
+ping -n 4 192.168.20.4
 
 ```
-# 3. **Configuração da DMZ**:
+
+# 3. Configuração da DMZ:
 Na DMZ, você usará a rede **172.16.100.0/28**, que permite até 14 IPs (host). A DMZ deve ter os seguintes servidores:
 
 - **Servidor DHCP**: 172.16.100.2
@@ -197,14 +245,15 @@ Na DMZ, você usará a rede **172.16.100.0/28**, que permite até 14 IPs (host).
 - **Servidor FTP**: 172.16.100.5
 
 
-## 3.1. **Configuração de DHCP**:
+## 3.1. Configuração de DHCP:
 1. Se optar pelo DHCP local em cada roteador:
 	- **Guanambi**: Configurar um pool de endereços para a rede 192.168.20.0/27.
 	- **Caetité**: Configurar um pool de endereços para a rede 192.168.20.32/27.
 	- **Urandi**: Configurar um pool de endereços para a rede 192.168.20.64/27.
 	- **Brumado**: Configurar um pool de endereços para a rede 192.168.20.96/27.
 2. Caso opte pelo DHCP centralizado na DMZ, configure um pool de endereços para todas as redes e faça com que os roteadores das filiais sejam "relay agents" para o servidor DHCP na DMZ.
-   - ip helper-address 172.16.100.2
+   - `ip helper-address 172.16.100.2`
+
 ## 3.2. Configuração do Servidor DNS:
 - Configure o servidor DNS na DMZ para resolver o domínio `www.animaeducacao.com.br`.
 - Aponte o endereço `www.animaeducacao.com.br` para o IP do servidor Web dentro da DMZ.
@@ -222,7 +271,12 @@ Na DMZ, você usará a rede **172.16.100.0/28**, que permite até 14 IPs (host).
 		    `nslookup www.animaeducacao.com.br`
 	3. **Usar o comando `curl` (para testar a resposta HTTP)**
 		- No terminal, use o comando `curl` para verificar a resposta HTTP do servidor Web:
-		  ` curl http://www.animaeducacao.com.br`
+		  `curl http://www.animaeducacao.com.br`
+    4. **Usar o comando `ftp` (para conectar ao FTP)**
+        - Digite `ftp 172.16.100.5` no cmd, e logo em seguida faca o login com:
+            - **user**: `user1`
+            - **password**: `senha123`
+
 # 4. Configuração do Roteador com WiFi
 
 
