atualizacao cidades -rede wifi-

--- a/_posts/2024-10-14-cidades.md
+++ b/_posts/2024-10-14-cidades.md
@@ -236,7 +236,7 @@ ping -n 4 192.168.20.4
 
 ```
 
-# 3. Configuração da DMZ:
+## 3. Configuração da DMZ:
 Na DMZ, você usará a rede **172.16.100.0/28**, que permite até 14 IPs (host). A DMZ deve ter os seguintes servidores:
 
 - **Servidor DHCP**: 172.16.100.2
@@ -244,8 +244,7 @@ Na DMZ, você usará a rede **172.16.100.0/28**, que permite até 14 IPs (host).
 - **Servidor DNS**: 172.16.100.4
 - **Servidor FTP**: 172.16.100.5
 
-
-## 3.1. Configuração de DHCP:
+### 3.1. Configuração de DHCP:
 1. Se optar pelo DHCP local em cada roteador:
 	- **Guanambi**: Configurar um pool de endereços para a rede 192.168.20.0/27.
 	- **Caetité**: Configurar um pool de endereços para a rede 192.168.20.32/27.
@@ -254,10 +253,10 @@ Na DMZ, você usará a rede **172.16.100.0/28**, que permite até 14 IPs (host).
 2. Caso opte pelo DHCP centralizado na DMZ, configure um pool de endereços para todas as redes e faça com que os roteadores das filiais sejam "relay agents" para o servidor DHCP na DMZ.
    - `ip helper-address 172.16.100.2`
 
-## 3.2. Configuração do Servidor DNS:
+### 3.2. Configuração do Servidor DNS:
 - Configure o servidor DNS na DMZ para resolver o domínio `www.animaeducacao.com.br`.
 - Aponte o endereço `www.animaeducacao.com.br` para o IP do servidor Web dentro da DMZ.
-## 3.3. Configuração dos Servidores Web e FTP:
+### 3.3. Configuração dos Servidores Web e FTP:
 - No servidor Web da DMZ, configure um serviço HTTP para hospedar a página de exemplo.
 - Configure o servidor FTP na DMZ para acesso via protocolo FTP.
 - Teste o acesso ao servidor Web pelo domínio e ao servidor FTP pela rede.
@@ -277,8 +276,94 @@ Na DMZ, você usará a rede **172.16.100.0/28**, que permite até 14 IPs (host).
             - **user**: `user1`
             - **password**: `senha123`
 
-# 4. Configuração do Roteador com WiFi
+## 4. Configuração do Roteador com WiFi
+Será necessário adicionar um **roteador** e um **access point**.
 
+### Access Point
+Na port 1, configure:
+- **SSID:** `home`
+- **Authentication:** `WPA2-PSK`
+- **Senha:** `senha1234`
+
+### roteador da rede WiFi
+#### Porta Serial
+- **IPv4 Address:** `10.20.20.2`  
+- **Subnet Mask:** `255.255.255.252`
+
+#### Porta FastEthernet0/0
+- **IPv4 Address:** `192.168.100.1`  
+- **Subnet Mask:** `255.255.255.240`
+
+#### Rotas Configuradas no Roteador
+#### Rotas para os Roteadores
+Adicione as rotas abaixo para conectar aos demais roteadores:  
+
+```bash
+ip route 10.10.10.0 255.255.255.252 10.20.20.1
+ip route 10.10.10.16 255.255.255.252 10.20.20.1
+ip route 10.10.10.20 255.255.255.252 10.20.20.1
+ip route 10.10.10.24 255.255.255.252 10.20.20.1
+```
+#### Rotas para as redes
+Adicione as rotas abaixo para conectar às redes:
+
+```bash
+ip route 192.168.20.0 255.255.255.224 10.20.20.1
+ip route 192.168.20.32 255.255.255.224 10.20.20.1
+ip route 192.168.20.64 255.255.255.224 10.20.20.1
+ip route 192.168.20.96 255.255.255.224 10.20.20.1
+ip route 172.16.100.0 255.255.255.240 10.20.20.1
+```
+### Configuração nos roteadores de redes ja existentes
+Para cada rede existente, adicione as rotas abaixo:
+#### Rota para o Roteador WiFi
+Substitua `porta do roteador guanambi` pelo IP correto:
+
+```bash
+ip route 10.20.20.0 255.255.255.224 10.10.10.*porta do roteador guanambi*
+```
+**Exemplo:**
+Para a rede Caetité:
+
+```bash
+ip route 10.20.20.0 255.255.255.224 10.10.10.17
+```
+#### Rota para a rede do Roteador
+Substitua `porta do roteador guanambi` pelo IP correto:
+
+```bash
+ip route 192.168.100.0 255.255.255.240 10.10.10.*porta do roteador guanambi*
+```
+
+**Exemplo:**
+Para o roteador da DMZ:
+```bash
+ip route 192.168.100.0 255.255.255.240 10.10.10.2
+```
+
+### Configuração do Servidor DHCP
+- Default Gateway: `192.168.100.1`
+- DNS Server: `172.16.100.3`
+- Start IP Address: `192.168.100.0`
+- Subnet Mask: `255.255.255.240`
+
+### Configuração dos Notebooks
+Nos notebooks:
+1. Ative o DHCP.
+2. Conecte-se à rede WiFi utilizando:
+    - SSID: `home`
+    - Senha: `senha1234`
+
+### Garantir o Funcionamento do DHCP
+No roteador WiFi, execute o seguinte comando para garantir o funcionamento do DHCP:  
+```bash
+enable
+configure terminal
+interface fastEthernet0/0
+ip helper-address 172.16.100.2
+end
+write memory
+```
 
 ---
 
