pequeno ajuste ortografico

--- a/_posts/2025-02-26-alias.md
+++ b/_posts/2025-02-26-alias.md
@@ -1,8 +1,9 @@
 ---
 title: Atalho no terminal
 date: 2025-02-26 17:40:00 -03:00
-category: [dicas]
+category: [dicas, pc]
 tag: [dicas, pc, terminal]
+image: "https://static1.howtogeekimages.com/wordpress/wp-content/uploads/wm/2024/10/example-of-alias-running-on-the-linux-terminal.jpg"
 ---
 Se você, assim como eu, acha meio maçante ter que toda hora escrever a rota da
 sua pasta de projeto no terminal para poder acessá-la, fique calmo, pois você
