--- a/_posts/2025-03-08-dia01.md
+++ b/_posts/2025-03-08-dia01.md
@@ -4,6 +4,7 @@ description: Dia 1 do projeto 30 dias com js
 tag: [js, programação, front-end, desafio]
 category: [30days]
 date: 2025-03-08 10:47:00 -03:00
+image: "https://assets.dio.me/NE7uaL6XGP-9iGInOaN5IGlCkhpX-81xNRT38bh__J0/f:webp/q:80/L2FydGljbGVzL2NvdmVyL2E0YjUyMjFjLTVkMzgtNGY4Mi04MzBlLTc4YTY1NWI4N2RlNi5qcGc"
 ---
 
 Olá, galera! O primeiro desafio do projeto de 30 dias com JS foi criar um
@@ -11,7 +12,7 @@ contador de cliques, que basicamente exibe a quantidade de vezes que você clico
 em um botão.
 
 Para iniciar ele, criei um arquivo HTML com:
-- Um botão, de id `botao`
+- Um botão
 - Um parágrafo, de id `quantidade`
 
 Em seguida, passei para o JavaScript, onde criei a função `ContadorDeCliques()`.
@@ -19,13 +20,10 @@ Em seguida, passei para o JavaScript, onde criei a função `ContadorDeCliques()
 let contador = 0;
 
 function ContadorDeCliques(){
-    let botao = document.getElementById('botao');
     let saida = document.getElementById('quantidade');
 
-    if(botao){
-        contador++;
-        saida.innerText = contador;
-    }
+    contador++;
+    saida.innerText = contador;
 };
 ```
 
