--- a/_posts/2025-03-09-dia02.md
+++ b/_posts/2025-03-09-dia02.md
@@ -1,5 +1,5 @@
 ---
-title:  Criar um gerador de cor aleatorio
+title: Criar um gerador de cor aleatorio
 description: Dia 2 do projeto 30 dias com js
 tag: [js, programação, front-end, desafio]
 category: [30days]
@@ -9,7 +9,7 @@ image: "https://assets.dio.me/NE7uaL6XGP-9iGInOaN5IGlCkhpX-81xNRT38bh__J0/f:webp
 
 Oi gente, hoje no segundo dia do desafio, a tarefa foi criar um botão que troca a cor do fundo da página de forma aleatória.
 Para começar, criei um **HTML** simples contendo:
-- Um botão;
+- Um botão.
 - Um elemento `<h3>` com o `id` **colorName**, onde será exibido o código da cor gerada.
 Em seguida, escrevi o código **JavaScript**, que ficou assim:
 
