--- a/_posts/2025-03-13-dia06.md
+++ b/_posts/2025-03-13-dia06.md
@@ -71,3 +71,10 @@ function CreateModal(title, description) {
 ```
 
 Aqui, criei os elementos HTML via JavaScript, adicionei classes, conteúdo e estrutura. Diferente do primeiro modal, este não utiliza `display: none`, pois o próprio elemento é removido ao clicar no botão de fechar.
+
+---
+
+O resultado final você pode conferir
+[aqui](https://andra-sun.github.io/30DaysJs/Day06/)
+<br/>
+[link para o repositorio do projeto](https://github.com/Andra-sun/30DaysJs)
