atualizacao do tema

--- a/_posts/2025-03-22-dia8-a-14.md
+++ b/_posts/2025-03-22-dia8-a-14.md
@@ -24,19 +24,19 @@ import Week from "./week.js";
 import BackToTop from "./BackTop.js";
 
 async function App() {
-    const root = document.getElementById("root");
-    const projectsContainer = await Projects();
-    root.appendChild(Header());
-    root.appendChild(Week());
-    root.appendChild(projectsContainer);
-    root.appendChild(About());
-    root.appendChild(More());
-    root.appendChild(BackToTop());
+  const root = document.getElementById("root");
+  const projectsContainer = await Projects();
+  root.appendChild(Header());
+  root.appendChild(Week());
+  root.appendChild(projectsContainer);
+  root.appendChild(About());
+  root.appendChild(More());
+  root.appendChild(BackToTop());
 }
 
 export default App;
-
 ```
+{: file="app.js" }
 
 Não vou mostrar o código de todos os componentes aqui, se você quiser ver, pode
 acessar o [repositório da semana
